Enabled motion feature

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="haru" height="1000" width="1000"></canvas>
+    <canvas id="haru" height="900" width="900"></canvas>
+    <script type="text/javascript" src="./src/utils.js"></script>
     <script type="text/javascript" src="./lib/live2d.min.js"></script>
-    <script type="text/javascript" src="./src/Live2DFramework.js"></script>
+
     <script type="text/javascript" src="./src/haru.js"></script>
+    <script type="text/javascript" src="./src/motionManager.js"></script>
     <script type="text/javascript" src="./src/index.js"></script>
 </body>
 </html>
