--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <canvas id="haru" height="900" width="900"></canvas>
-    <audio id="audio" src="test.mp3" type="audio/mpeg"></audio>
+    <audio id="song" src="./assets/haru/sounds/haru.mp3" type="audio/mpeg"></audio>
+    
+    <audio id="vocal" src="./assets/haru/sounds/vocal.mp3" type="audio/mpeg"></audio>
     <script type="text/javascript" src="./src/utils.js"></script>
     <script type="text/javascript" src="./lib/live2d.min.js"></script>
     <script type="text/javascript" src="./src/musicPlayer.js"></script>
