--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Document</title>
+        <style media="screen">
+            *{
+                margin: 0;
+                padding: 0;
+            }
+        </style>
     </head>
     <body>
         <canvas id="haru" height="1200" width="900"></canvas>
